# xsystem4-android

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build-shared-libs.sh  collect-licenses.sh
.github/workflows/: build.yml
cmake/: FindFreetype.cmake  FindSDL2.cmake
project/: build.gradle
project/app/: build.gradle
project/app/src/main/: AndroidManifest.xml
project/app/src/main/java/io/github/kichikuou/xsystem4/: GameList.kt  LauncherActivity.kt  LicensesActivity.kt  LicensesMenuActivity.kt  ManualActivity.kt  PEResourceExtractor.kt  XSystem4Activity.kt
project/app/src/main/res/drawable/: ic_launcher.xml
project/app/src/main/res/layout/: launcher.xml  launcher_item.xml
project/app/src/main/res/menu/: launcher_menu.xml
project/app/src/main/res/values/: strings.xml
project/app/src/main/res/values-ja/: strings.xml
project/gradle/wrapper/: gradle-wrapper.properties
